[package]
name = "unnamed_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0" }

[lib]
crate-type = ["cdylib", "rlib"]
name = "unnamed_game"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "was-server-runner"
